src/objects/APTS_Order_Interface_Log__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Message__c</fullName>
        <description>A field to store JSON received from External System</description>
        <inlineHelpText>A field to store JSON received from External System</inlineHelpText>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Parent_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Self lookup to store external JSON data in multiple record in case JSON data exceed storing limits..</inlineHelpText>
        <label>Parent Log</label>
        <referenceTo>APTS_Order_Interface_Log__c</referenceTo>
        <relationshipName>EPI_Order_Interface_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sequence__c</fullName>
        <inlineHelpText>Sequence of record in case of multiple records</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_SourceOrderNumber__c</fullName>
        <label>SourceOrderNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Source__c</fullName>
        <description>Field is used to determine source of the request, ex, &quot;Digital Order&quot; or &quot;RSO Order&quot;</description>
        <inlineHelpText>Field is used to determine source of the request, ex, &quot;Digital Order&quot; or &quot;RSO Order&quot;</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Digital</fullName>
                    <default>true</default>
                    <label>Digital</label>
                </value>
                <value>
                    <fullName>RSOApp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Type__c</fullName>
        <inlineHelpText>to determine log type whether its attachment or OrderData</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OrderData</fullName>
                    <default>true</default>
                    <label>OrderData</label>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Order Interface Log</label>
    <listViews>
        <fullName>APTS_CS_Queue_APTS_EPI_Order_Interface_Log</fullName>
        <filterScope>Queue</filterScope>
        <label>CS Queue</label>
        <queue>APTS_CS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APTS_CS_Queue_APTS_Order_Interface_Log</fullName>
        <filterScope>Queue</filterScope>
        <label>CS Queue</label>
        <queue>APTS_CS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Parent_Log__c</columns>
        <columns>APTS_Sequence__c</columns>
        <columns>APTS_SourceOrderNumber__c</columns>
        <columns>APTS_Status__c</columns>
        <columns>APTS_Source__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BE_Digital_Order_APTS_Order_Interface_Log</fullName>
        <filterScope>Queue</filterScope>
        <label>BE Digital Order</label>
        <queue>BE_Digital_Order</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DE_Digital_Order_APTS_Order_Interface_Log</fullName>
        <filterScope>Queue</filterScope>
        <label>DE Digital Order</label>
        <queue>DE_Digital_Order</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DK_Digital_Order_APTS_Order_Interface_Log</fullName>
        <filterScope>Queue</filterScope>
        <label>DK Digital Order</label>
        <queue>DK_Digital_Order</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Digital_In_Complete</fullName>
        <columns>NAME</columns>
        <columns>APTS_Source__c</columns>
        <columns>APTS_SourceOrderNumber__c</columns>
        <columns>APTS_Status__c</columns>
        <columns>APTS_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Source__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </filters>
        <label>Digital In Complete</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ES_Digital_Order_APTS_Order_Interface_Log</fullName>
        <filterScope>Queue</filterScope>
        <label>ES Digital Order</label>
        <queue>ES_Digital_Order</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>InComplete</fullName>
        <columns>NAME</columns>
        <columns>APTS_Source__c</columns>
        <columns>APTS_SourceOrderNumber__c</columns>
        <columns>APTS_Status__c</columns>
        <columns>APTS_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>APTS_Source__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </filters>
        <label>Digital Order New Or In Progress</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NL_Digital_Order_APTS_Order_Interface_Log</fullName>
        <filterScope>Queue</filterScope>
        <label>NL Digital Order</label>
        <queue>NL_Digital_Order</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NO_Digital_Order_APTS_Order_Interface_Log</fullName>
        <filterScope>Queue</filterScope>
        <label>NO Digital Order</label>
        <queue>NO_Digital_Order</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Routesales_orders_NL</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>APTS_SourceOrderNumber__c</columns>
        <columns>APTS_Type__c</columns>
        <columns>APTS_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Type__c</field>
            <operation>equals</operation>
            <value>OrderData</value>
        </filters>
        <filters>
            <field>APTS_Source__c</field>
            <operation>equals</operation>
            <value>RSOApp</value>
        </filters>
        <label>Routesales orders NL</label>
    </listViews>
    <listViews>
        <fullName>SE_Digital_Order_APTS_Order_Interface_Log</fullName>
        <filterScope>Queue</filterScope>
        <label>SE Digital Order</label>
        <queue>SE_Digital_Order</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UK_Digital_Order_APTS_Order_Interface_Log</fullName>
        <filterScope>Queue</filterScope>
        <label>UK Digital Order</label>
        <queue>UK_Digital_Order</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EL-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Interface Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>